examples/02.kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: tetris
        image: bsord/tetris
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
