examples/02.kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris
spec:
  ports:
  - port: 80
    targetPort: 80
