examples/02.kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tetris
spec:
  rules:
  - host: tetris.localtest.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tetris
            port: 
              number: 80
